--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "cloudscraper": "^4.6.0",
         "crypto": "^1.0.1",
         "crypto-js": "^4.1.1",
+        "express": "^4.18.2",
         "file-type": "^16.5.3",
         "filestack-js": "^3.28.0",
         "fluent-ffmpeg": "^2.1.2",
